Bug 360910 - KMail shows PGP/MIME encrypted content as attachment, does not offer to decrypt.
Summary: KMail shows PGP/MIME encrypted content as attachment, does not offer to decrypt.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: crypto (other bugs)
Version First Reported In: Git (master)
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 347740 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-23 16:51 UTC by quazgar
Modified: 2016-06-23 08:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description quazgar 2016-03-23 16:51:44 UTC
I am not certain if this is a regression to bug 286481 again, the symptom looks very similar to me.

When receiving PGP/MIME encrypted mails from Apple Mail with GPGMail (in most cases, this means mails with attachments), KMail shows the MIME parts as attachments instead of asking to decrypt them.

The relevant message parts looks like this:

...
Content-Type: multipart/mixed;
        boundary="_003_55514CDCA78D430384C5F0810DF10C7Adsmpgde_"
MIME-Version: 1.0
X-Bogosity: Ham, tests=bogofilter, spamicity=0.000000, version=1.2.4

 
--_003_55514CDCA78D430384C5F0810DF10C7Adsmpgde_
Content-Type: text/plain; charset="us-ascii"


--_003_55514CDCA78D430384C5F0810DF10C7Adsmpgde_
Content-Type: application/pgp-encrypted;
        name="PGPMIME Versions Identification"
Content-Description: PGP/MIME Versions Identification
Content-Disposition: attachment; filename="PGPMIME Versions Identification";
        size=77; creation-date="Tue, 22 Mar 2016 16:09:18 GMT";
        modification-date="Tue, 22 Mar 2016 16:09:18 GMT"
Content-ID: <D82BB3DF89947646AD6C4C24C8C54BAC@um.gwdg.de>
Content-Transfer-Encoding: base64

VmVyc2lvbjogMQ0NCg==

--_003_55514CDCA78D430384C5F0810DF10C7Adsmpgde_
Content-Type: application/octet-stream; name="encrypted.asc"
Content-Description: OpenPGP encrypted message.asc
Content-Disposition: attachment; filename="encrypted.asc"; size=3183;
        creation-date="Tue, 22 Mar 2016 16:09:18 GMT";
        modification-date="Tue, 22 Mar 2016 16:09:18 GMT"
Content-ID: <58A712E65AB1824AB726904A6449178F@um.gwdg.de>
Content-Transfer-Encoding: base64

LS0tLS1CRUdJTiBQR1AgTUVTU0FHRS0tLS0tDQpDb21tZW50OiBHUEdUb29scyAtIGh0dHBzOi8v
Z3BndG9vbHMub3JnDQoNCmhRSU1BK1Yrc2NWMjZLanRBUS8vVFUvamtkMG0zVzRDRDJmdjd4NGJu
...
RjdnPT0NCj0yRUlaDQotLS0tLUVORCBQR1AgTUVTU0FHRS0tLS0tDQo=

--_003_55514CDCA78D430384C5F0810DF10C7Adsmpgde_--

The full message is available as well, if necessary.

Reproducible: Always

Steps to Reproduce:
Get PGP/MIME encrypted message from Apple Mail.

Actual Results:  
Does not decrypt message.

Expected Results:  
Should decrypt message.

If the file "encrypted.asc" is saved to disc and decrypted manually, it can be opened by KMail as a separate message.
Comment 1 Sandro Knauß 2016-03-24 12:45:18 UTC
So far I see not the nessesary bit, why this is not decrypted. Can you send me a encrypted mail from apple mail? Than I can test on my own system with kmail 5.1.1.
Comment 2 Sandro Knauß 2016-03-24 13:52:11 UTC
Okay I now see the problem.

Applemail structues the mail differnently:

multipart/mixed
   -> application/pgp-encrypted
   -> application/octet-stream

normal MIME encrypted mails have a structure like this:

multipart/encrypted
   -> application/pgp-encrypted
   -> application/octet-stream

And mimetreeparser do not react only on the mimetype multipart/encrypted and not at  application/pgp-encrypted.
Comment 3 Sandro Knauß 2016-03-28 14:45:01 UTC
Git commit db5cb4496d8a029d39374791751a96263a052ddc by Sandro Knauß.
Committed on 28/03/2016 at 14:42.
Pushed by knauss into branch 'master'.

Add new BodyFormatter for application/pgp-encrypted

FIXED-IN: 5.3

A  +52   -0    mimetreeparser/autotests/data/openpgp-encrypted-applemail.mbox
A  +40   -0    mimetreeparser/autotests/data/openpgp-encrypted-applemail.mbox.html
M  +1    -0    mimetreeparser/src/CMakeLists.txt
A  +99   -0    mimetreeparser/src/bodyformatter/applicationpgpencrypted.cpp     [License: LGPL (v2+)]
A  +41   -0    mimetreeparser/src/bodyformatter/applicationpgpencrypted.h     [License: LGPL (v2+)]
M  +2    -0    mimetreeparser/src/viewer/bodypartformatter.cpp

http://commits.kde.org/messagelib/db5cb4496d8a029d39374791751a96263a052ddc
Comment 4 Sandro Knauß 2016-06-23 08:42:48 UTC
*** Bug 347740 has been marked as a duplicate of this bug. ***