Add new BodyFormatter for application/pgp-encrypted

FIXED-IN: 5.3
BUG: 360910